Testing AsyncContext.dispatch() in combination with CrossContext Dispatch.